# Tehuti-CLI

./: .env  .env.example  .gitignore  .tehuti.example.json  AGENTS.md  BRANDING.md  CODEBASE_ANALYSIS.md  CONTRIBUTING.md  IMPROVEMENTS.md  LICENSE  README.md  STYLE_GUIDE.md  TEHUTI_ANALYSIS.md  keys.env  package-lock.json  package.json  pyproject.toml  tehuti.schema.json
.github/workflows/: full-deps-gate.yml  quality-gate.yml
docs/: API_CONTRACTS.md  ARCHITECTURE.md  COMMANDS.md  CONFIGURATION.md  CONTRACT_DIFF_CHANGELOG.md  CONTRACT_GOVERNANCE.md  EGYPTIAN_THEME.md  EXECUTION_TRACKER.md  GETTING_STARTED.md  LOOP_STATE_TABLE.md  MAINTAINER_MAP.md  OPERATOR_RUNBOOK.md  OUTPUT_POLICY_AUDIT_2026-02-12.md  PARITY_MATRIX.md  README.md  RELEASE_CHANNELS.md  RELEASE_NOTES_2026-02-12.md  RELEASE_NOTES_2026-02-13.md  RETRY_BACKOFF_POLICY.md  SESSION_CHANGES_2026-02-12.md  SESSION_CHANGES_2026-02-13.md  SLO_BASELINES.md  TOOLS.md  TROUBLESHOOTING.md  USER_GUIDE.md  UX.md  contract_baseline.json
docs/adr/: 0001-runtime-foundation-and-capability-parity.md  0002-contract-governance-and-parity-enforcement.md  TEMPLATE.md
docs/archive/: COMPREHENSIVE_PLAN.md
scripts/: canary_gate.py  check_adr_required.py  check_contract_coverage.py  check_docs_drift.py  check_migration_safety.py  check_release_hygiene.py  check_runtime_policy_consistency.py  check_sensitive_exposure.py  check_version_consistency.py  clean_dev_artifacts.py  contract_diff_changelog.py  lint_tool_metadata.py  perf_long_session.py  perf_memory_relevance.py  perf_smoke.py  perf_sustained.py  quality_gate.sh  rollback_drill.py  rollback_one_command.py  smoke_runtime.py  surface_conformance_runner.py  ux_session_test.py
scripts/fixtures/: canary_metrics_ok.json
src/: index.ts  tui-opentui.tsx
src/agent/: context-compressor.test.ts  context-compressor.ts  context.ts  index.ts  model-router.ts  parallel-executor.test.ts  parallel-executor.ts  prefetcher.test.ts  prefetcher.ts
src/agent/cache/: index.ts  invalidation.ts  lru-cache.test.ts  lru-cache.ts  persistent-cache.test.ts  persistent-cache.ts  tool-cache.test.ts  tool-cache.ts
src/agent/skills/: manager.test.ts  manager.ts  tools.test.ts  tools.ts
src/agent/tools/: collaboration.ts  custom-provider.ts  fs.ts  grepai-advanced.ts  grepai-cache.ts  grepai-mcp.ts  grepai.ts  index.ts  kilocode-advanced.ts  kilocode.ts  registry.ts  web.ts
src/api/: cost.ts  custom-provider.ts  http-agent.ts  index.ts  kilocode.ts  model-capabilities.ts  models.ts  openrouter.ts  response-cache.ts  streaming.test.ts  streaming.ts
src/branding/: index.ts
src/cli/commands/: chat.ts
src/config/: loader.ts  schema.test.ts  schema.ts  wizard.ts
src/session/: manager.ts
src/tehuti_cli/: advanced_tools.py  agentic.py  browser_tools.py  cli.py  constants.py  enhanced_web_tools.py  mcp_tools.py  streaming_tools.py  tool_availability.py  tool_builder.py  vision_tools.py  workflow_tools.py
src/tehuti_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/tehuti_cli/core/: a2a_client.py  agent_loop.py  app.py  automations.py  blueprint.py  delegates.py  (+18 more)
src/terminal/: buffered-writer.ts  capabilities.ts  highlighter.ts  index.ts  markdown.ts  output.ts
src/utils/: concurrency.ts  errors.ts  telemetry.test.ts  telemetry.ts
tests/: test_a2a_protocol_errors.py  test_agent_loop.py  test_agentic_integration.py  test_cli_envelope_contract.py  test_cli_interactive_envelope_contract.py  test_cli_main_flow.py  test_config_access_policy.py  test_contract_fixtures.py  test_contract_parity.py  test_contract_path_enforcement.py  test_interactive_dynamic_messages.py  test_interactive_session_persistence.py  test_mcp_contract_errors.py  test_memory_determinism.py  test_memory_policy_controls.py  test_metrics_contract.py  test_phase_stream.py  test_preflight.py  test_protocol_lifecycle_conformance.py  test_protocol_tool_contract_classification.py  test_provider_usage_normalization.py  test_pty_dynamic_messages.py  test_release_hygiene.py  test_retry_semantics_parity.py  test_runtime_contract_regressions.py  test_runtime_dynamic_outputs.py  test_sensitive_exposure_guard.py  test_shell_progress.py  test_surface_conformance_runner.py  test_task_graph_dependencies.py  test_tehuti.py  test_tool_contract.py  test_tool_metadata_contract.py  test_tooling_capability_baseline.py  test_tools.py  test_web_api_contract.py  test_web_error_envelope_contract.py  test_web_progress_filter.py  test_wire_agent_task_contract.py  test_wire_contract.py  (+2 more)
(+46 files in other folders)
