[project]
name = "tehuti-cli"
version = "0.1.0"
description = "Project Tehuti: The Deity Thoth AGI CLI"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Project Tehuti"}]

dependencies = [
  "typer>=0.9.0",
  "rich>=13.7.0",
  "prompt-toolkit>=3.0.43",
  "pydantic>=2.6.0",
  "tomlkit>=0.12.0",
  "httpx>=0.26.0",
  "fastapi>=0.110.0",
  "uvicorn>=0.27.0",
  "pexpect>=4.9.0",
  "rapidfuzz>=3.7.0",
]

[project.scripts]
tehuti = "tehuti_cli.cli:cli"

[tool.pytest.ini_options]
addopts = "-q"
