[project]
name = "tehuti-cli"
version = "0.2.0"
description = "Project Tehuti: The Deity Thoth AGI CLI - Full-featured AI Development Partner"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Project Tehuti"}]

dependencies = [
  # Core
  "typer>=0.9.0",
  "rich>=13.7.0",
  "prompt-toolkit>=3.0.43",
  "pydantic>=2.6.0",
  "tomlkit>=0.12.0",
  "httpx>=0.26.0",
  "fastapi>=0.110.0",
  "uvicorn>=0.27.0",
  "pexpect>=4.9.0",
  "rapidfuzz>=3.7.0",

  # Browser Automation
  "playwright>=1.40.0",
  "pytest-asyncio>=0.23.0",

  # Image Processing & Vision
  "Pillow>=10.0.0",
  "numpy>=1.24.0",

  # MCP (Model Context Protocol)
  "mcp>=0.9.0",

  # Enhanced Web Fetching
  "selectolax>=0.3.0",
  "trafilatura>=1.6.0",

  # Cloud Providers
  "boto3>=1.34.0",
  "google-cloud-storage>=2.14.0",
  "azure-identity>=1.15.0",
  "azure-mgmt-containerinstance>=10.1.0",

  # YAML Support
  "PyYAML>=6.0.1",
]

[project.scripts]
tehuti = "tehuti_cli.cli:cli"

[tool.pytest]
addopts = ["-q"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 120
target-version = "py310"
