[project]
name = "tehuti-cli"
version = "0.3.0"
description = "Project Tehuti: The Deity Thoth AGI CLI - Ultimate Agentic AI Development Partner"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Project Tehuti"}]

dependencies = [
  # Core Framework
  "typer>=0.9.0",
  "rich>=13.7.0",
  "prompt-toolkit>=3.0.43",
  "pydantic>=2.6.0",
  "tomlkit>=0.12.0",
  "httpx>=0.26.0",
  "fastapi>=0.110.0",
  "uvicorn>=0.27.0",
  "pexpect>=4.9.0",
  "rapidfuzz>=3.7.0",
  
  # Agentic AI & Structured Outputs
  "instructor>=1.0.0",
  "docstring-parser>=0.15.0",
  "jsonschema>=4.21.0",
  
  # Memory & Vector Storage
  "chromadb>=0.4.0",
  "sentence-transformers>=2.3.0",
  "numpy>=1.24.0",
  
  # Async Support
  "anyio>=4.0.0",
  "trio>=0.24.0",
  "asyncio-mqtt>=0.16.0",
  
  # Browser Automation
  "playwright>=1.40.0",
  "pytest-asyncio>=0.23.0",
  
  # Image Processing & Vision
  "Pillow>=10.0.0",
  "pytesseract>=0.3.10",
  "opencv-python>=4.9.0",
  "qrcode>=7.4.0",
  "pyzbar>=0.1.9",
  
  # MCP (Model Context Protocol) - Updated
  "mcp>=1.0.0",
  
  # Enhanced Web Fetching
  "selectolax>=0.3.0",
  "trafilatura>=1.6.0",
  "beautifulsoup4>=4.12.0",
  "lxml>=5.1.0",
  
  # Observability & Tracing
  "opentelemetry-api>=1.22.0",
  "opentelemetry-sdk>=1.22.0",
  "opentelemetry-instrumentation>=0.43b0",
  "structlog>=24.1.0",
  "prometheus-client>=0.19.0",
  
  # Cloud Providers
  "boto3>=1.34.0",
  "google-cloud-storage>=2.14.0",
  "azure-identity>=1.15.0",
  "azure-mgmt-containerinstance>=10.1.0",
  
  # Data Processing
  "PyYAML>=6.0.1",
  "pandas>=2.2.0",
  "openpyxl>=3.1.0",
  
  # Testing & Validation
  "pytest>=8.0.0",
  "pytest-cov>=4.1.0",
  "hypothesis>=6.98.0",
  "faker>=23.0.0",
]

[project.optional-dependencies]
dev = [
  "black>=24.1.0",
  "ruff>=0.2.0",
  "mypy>=1.8.0",
  "pre-commit>=3.6.0",
  "bandit>=1.7.0",
  "safety>=3.0.0",
]

[project.scripts]
tehuti = "tehuti_cli.cli:cli"

[tool.pytest]
addopts = ["-q", "--tb=short"]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py310"
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501", "B008"]

[tool.ruff.pydocstyle]
convention = "google"

[tool.black]
line-length = 120
target-version = ["py310", "py311", "py312"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
skips = ["B101", "B601"]
